Launch and vote buttons

--- a/rrLauncher/launcher.kv
+++ b/rrLauncher/launcher.kv
@@ -38,7 +38,7 @@
 			size: self.size
 
 		
-<Bar>:
+<Bar2>:
 	height: 600
 	size_hint_y: None
 		
@@ -54,7 +54,7 @@
 	
 
 	
-<AppView2>:
+<AppView>:
 	
 	ScrollView:
 		scroll_timeout: 200
