--- a/rrLauncher/launcher.kv
+++ b/rrLauncher/launcher.kv
@@ -71,7 +71,7 @@
 
 		canvas.before:
 			Color:
-				rgb: 1, 1, 1
+				rgb: .24, .24, .25
 			Rectangle:
 				texture: root.texture_sidebar
 				tex_coords: [root.texture_sidebar, 0, 0, 1, 0, 1, self.height / 5, 0, self.height / 5][1:]
@@ -85,7 +85,10 @@
 
 	canvas.before:
 		Color:
-			rgb: 1, 1, 1
+			rgb: .24, .24, .25
+		Rectangle:
+			pos: (0,0)
+			size: self.size
 		Rectangle:
 			texture: root.texture_sidebar
 			tex_coords: [root.texture_sidebar, 0, 0, 1, 0, 1, self.height / 5, 0, self.height / 5][1:]
