--- a/rrLauncher/launcher.kv
+++ b/rrLauncher/launcher.kv
@@ -22,7 +22,7 @@
 		Color:
 			rgb: 1,1,1
 		Rectangle:
-			source: self.layer_texture_path
+			texture: self.layer_texture_path
 			size: (self.width - 2*self.padding, self.height - 2*self.padding)
 			pos: (self.padding,self.padding)
                         
