bar : removed temporary texture when touch down bar : added grey background color

--- a/rrLauncher/launcher.kv
+++ b/rrLauncher/launcher.kv
@@ -63,6 +63,8 @@
 		Rectangle:
 			pos: (0,0)
 			size: self.size
+		Color:
+			rgb: .54,.54,.54
 		Rectangle:
 			texture: root.texture_sidebar
 			tex_coords: [root.texture_sidebar, 0, 0, 1, 0, 1, self.height / 5, 0, self.height / 5][1:]
